package com.example.backend.domain.service;

import org.springframework.stereotype.Service;

@Service
public class MatchingService {
}
