@startuml "Services — Partial Design Model"

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontSize 10
skinparam classFontSize 11
skinparam nodesep 10
skinparam ranksep 20

title Domain Services (Partial Design Model)

' === ROW 1 ===
class UserService <<Service>> {
    + authenticate(LoginRequest) : AuthResponse
    + register(RegisterRequest) : AuthResponse
    + getUserProfile(Long) : UserProfileResponse
    + updateUserProfile(Long, UpdateProfileRequest) : UserProfileResponse
    + addBalance(Long, double) : UserProfileResponse
}

class BookingService <<Service>> {
    + createBooking(BookingRequest) : BookingResponse
    + getBookingsForLearner(Long) : List<BookingResponse>
    + getBookingsForProvider(Long) : List<BookingResponse>
    + finishBooking(Long, FinishBookingRequest) : BookingResponse
}

class CarService <<Service>> {
    + getCarsByProvider(Long) : List<CarDto>
    + createCar(Long, CarRequest) : CarDto
    + updateCar(Long, Long, CarRequest) : CarDto
    + deleteCar(Long, Long) : void
    + searchCars(String, String, Double, Double, Double) : List<CarDto>
}

' === ROW 2 ===
class AvailabilityService <<Service>> {
    + getWeeklyAvailability(Long, Long) : WeeklyAvailabilityResponse
    + replaceWeeklyAvailability(Long, Long, WeeklyAvailabilityRequest) : WeeklyAvailabilityResponse
}

class RouteService <<Service>> {
    + getDirections(double, double, double, double, TransportMode) : RouteResult
    + getParkingNearby(double, double, double) : List<ParkingSpot>
}

class AnalyticsService <<Service>> {
    + getCarUtilizationAnalytics() : AnalyticsResponseDTO
    + getCarUtilizationAnalyticsByProvider(Long) : AnalyticsResponseDTO
}

class MatchingService <<Service>> {
}

' Force 2-row layout
UserService -[hidden]down-> AvailabilityService
BookingService -[hidden]down-> RouteService
CarService -[hidden]down-> AnalyticsService

' Dependencies
UserService ..> "UserRepository"
UserService ..> "JwtUtil"
UserService ..> "UserFactoryRegistry"
BookingService ..> "BookingRepository"
BookingService ..> "PricingStrategyFactory"
BookingService ..> "BookingEventPublisher"
CarService ..> "CarRepository"
CarService ..> "CarProviderRepository"
AvailabilityService ..> "AvailabilitySlotRepository"
RouteService ..> "OSRMAdapter"
RouteService ..> "HereTransitAdapter"
RouteService ..> "OverpassAdapter"
AnalyticsService ..> "BookingRepository"

@enduml
